rename to mingler.js refactor public API add circular dependency detection

--- a/test/specRunner.html
+++ b/test/specRunner.html
@@ -9,16 +9,16 @@
 
   <!-- 3rd party libs -->
   <script type="text/javascript" src="../lib/underscore.js"></script>
-  
+
   <!-- src files -->
-  <script type="text/javascript" src="../src/component.js"></script>
+  <script type="text/javascript" src="../src/mingler.js"></script>
 
   <!-- test libs-->
   <script type="text/javascript" src="jasmine-1.1.0/jasmine.js"></script>
   <script type="text/javascript" src="jasmine-1.1.0/jasmine-html.js"></script>
 
   <!-- spec files -->
-  <script type="text/javascript" src="componentSpec.js"></script>
+  <script type="text/javascript" src="mingler-spec.js"></script>
 
   <script type="text/javascript">
     (function() {
